Bug 1436496 - Remove overflow caused by the new attribute element in the inspector. r=gl
MozReview-Commit-ID: 55PDRrZQBHa

UltraBlame original commit: c1e67066d43711e0aac7e2661538fe5b0f4d9517

--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -1080,31 +1080,27 @@ none
 .
 newattr
 {
-display
-:
-inline
--
-block
-;
-width
-:
-1em
-;
-height
-:
-1ex
-;
 margin
 -
 right
 :
 -
-1em
+13px
 ;
-padding
+}
+.
+newattr
 :
-1px
-0
+before
+{
+content
+:
+"
+\
+00a0
+\
+00a0
+"
 ;
 }
 .
